# SPPM-CPU-Optimization

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  null.d
bayesian_opt_build/: temp_res.pkl
scenes/: cornell_box.exr  large_box.exr  random_box.exr  reflect_box.exr  surgery_box.exr
scripts/: bayesian_opt.py  benchmark.py  compute_dssim.py  cost_analysis_depth.py  cost_analysis_photon.py  cost_analysis_pixel.py  cost_analysis_scene.py  depth experiment.csv  photon experiment.csv  pixel experiment.csv  plot.py  scene experiment.csv  setup.sh  validate.py
src/: CMakeLists.txt  librt_alg.dylib  librt_lib.dylib  librt_lib_d.dylib  main.c  scene_configs.h
src/algorithm/: normal.c  normal.h  pt.c  pt.h  sppm.c  sppm.h  sppm_s.c  sppm_s.h
src/ext/: CMakeLists.txt
src/lib/: array.c  array.h  arrayfixed2d.c  arrayfixed2d.h  arrayfloat.c  arrayfloat.h  arrayint.c  arrayint.h  arraypointer.c  arraypointer.h  arrayvector.c  arrayvector.h  avx_mathfun.c  avx_mathfun.h  bitmap.c  bitmap.cpp  bitmap.h  camera.c  camera.h  common.h  dt_l.h  intersection.c  intersection.h  intersection_l.c  intersection_l.h  mesh.c  mesh.h  ray.c  ray.h  ray_l.h  scene.c  scene.h  scene_l.c  scene_l.h  simd_math.h  simd_random.c  simd_random.h  simd_warping.c  simd_warping.h  vector.c  (+3 more)
